Handle received unbound reference PDFs
